- Updated cpu.c
- Added a C exeption handler
- Added libz
- Ported stdio and libpng
- Replaced zalloc by jemalloc (sbrk only, single-threaded only), GUI don't work anymore 
- Back to pure C in string.c, parallel desktop as well as virtualbox fail to handle the asm optimized versions

- Updated gma.c
- Fixed a bug in ati.c
- Update ati.c and nvidia.c

- Security fixes
- Implemented random uuid
- device_inject is now embedded into the modules that need it, and not in the core anymore

- Security fixes
- Fixed few bugs in AcpiCodec
- Fixes some bugs related to the auto-installer 

- Security fixes
- Using of optimized version for bcopy, bzero, strcmp, strcpy, strncpy, strlcat, strlcpy, strlen, strncmp, memset and memcmp
- Replaced strcmp (deprecated and unsecure) by strncmp as far as possible
- Decided to keep ld_classic to keep the compatibility with the apple's compiler from snow leopard (xcode 3.x) to Mountain lion (xcode 4.5)  (in fact this has not changed since the last commit ;-) )

- Security fixes

- Few security fixes
- Fixed a serious bug in picopng
- Fixed a bug in gui.c, related to the images loading
- Fixed a bug with acpi, where no acpi table may be configured 

- Security fixes
- Updated smbus(spd.c) and radeon(ati.c) card list (taken from the last cosmo1t's update)

- Added two boot options for High resolution display and reboot on kernel panic

- Added fake_crt.c to fix a linker issue ... but it still dont work.
- Added minor changes to makeinc.dir

- Security fixes
- Added beta support for Xcode 4.4

- Added memory info to the nvidia plist structure, so now one can add several cards to the plist and set a customized name and memory info for each cards
- Implemented a method to inject new graphics cards from a plist, no need to hardcode device ids anymore !! (for now, only nvidia cards are supported, see doc/ModuleHelp.txt for usage)
- Moved the smbios detection code to the freebsd one

- Fixed a bug in the bundle dependency dispatcher
